code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

17-Aug-2013 Michael Babker
 # [#31649] During Installation, PHP Setting Display Errors is Not Reported/Identified Correctly. Thanks Chad Windnagle
 # [#30934] Language Pack Install fail on Joomla V3.1.1 with PostGreSQL DB Backend. Thanks Michael Babker

15-Aug-2013 Michael Babker
 # [#31732] administrator/components/com_admin/sql/updates/postgresql/3.0.3.sql has wrong type should be integer instead of int(11).  Thanks Alan Hicks

15-Aug-2013 Jean-Marie Simonet
 # [#31744] Featured articles menu item error. Thanks Anthony THERREAU
 # [#30572] No backend javascript validation on com_content option input fields. Thanks Duong Nguyen
 # [#31717] output mod_newsfeed. Thanks Przemysław Pałyga

14-Aug-2013 Jean-Marie Simonet
 # [#31692] JFormFieldUrl garble HTML with emtpy class. Thanks Anthony THERREAU
 #$ [#31631] Small typo fix in Plugin. Thanks Gunjan Patel
 $ [#31714] Confusing text "search by tag" in the banner module. Thanks Brian Teeman
 + [#31436] *Create a update button to list new Help servers. Thanks Julien Vonthron

12-Aug-2013 Jean-Marie Simonet
 # [#31703] Fixed BC issue with tooltip/popover being added in wrong place. Thanks Peter Van Westen
 $ [#31210] Add the "!" at the mod_menu.ini for the adminmenu "Help". Thanks Tobias Zulauf
 # [#31697] *Tags menu items: impossible to delete the last "Type". Thanks Roberto Segura.
 $ [#31365] Statistics Module 'Visitors' should be 'Registered users'. Thanks Stefania Gaianigo and Brian Teeman
 # [#30413] Calender popup problem in pages containing calendar fields. Thanks Achal Aggarwal
 # [#31658] correct header for some ini files. Thanks Tobias Zulauf
 # [#31695] Installation screen shows placeholder instead of email address. Thanks Achal Aggarwal

11-Aug-2013 Jean-Marie Simonet
 # Reverting #31697 which breaks installation.